.provarCaches/00Df2000001KKNJEA4/objects/Incap311API__API_Account_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Incap311API__Available_SR_Types_For_GET__c</fullName>
        <inlineHelpText>The list of Service Types that an API account can view or search for. If a service type is omitted from this list, no request, or services will be shown that belong to that type.</inlineHelpText>
        <label>Available SR Types For GET</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__Available_SR_Types_For_PATCH__c</fullName>
        <inlineHelpText>The list of Service Types that an API account can make small updates for.</inlineHelpText>
        <label>Available SR Types For PATCH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__Available_SR_Types_For_POST__c</fullName>
        <inlineHelpText>The list of Service Types that an API account can create requests for.</inlineHelpText>
        <label>Available SR Types For POST</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__Available_SR_Types_For_PUT__c</fullName>
        <inlineHelpText>The list of Service Types that an API account can fully update.</inlineHelpText>
        <label>Available SR Types For PUT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__Available_SR_Types__c</fullName>
        <inlineHelpText>The list of Available Service Types.</inlineHelpText>
        <label>Available SR Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__Comments_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comments Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this if you wish to fully disable the API account. When disabled; the API account will be unable to make any calls (regardless of other settings).</inlineHelpText>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Last_Request_Date__c</fullName>
        <label>Last Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311API__Last_Reset_Date__c</fullName>
        <label>Last Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311API__Lock_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Lock_Flex_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Flex Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Lock_Recommended_Types__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Lock recommended types as part of Service Definition</description>
        <inlineHelpText>To Lock recommended types as part of Service Definition</inlineHelpText>
        <label>Lock Recommended Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Secret_Key_Id__c</fullName>
        <externalId>true</externalId>
        <label>Secret Key Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incap311API__Show_All_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The value of this field will determine whether or not to show all the attributes related to a case in the response.</description>
        <label>Show All Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Show_External_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The value of this field will determine whether or not to show external system in response.</description>
        <label>Show External System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Show_Legacy_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to control whether the API response should contain legacy activities or not.</description>
        <inlineHelpText>Check this field to show legacy activities in the API response.</inlineHelpText>
        <label>Show Legacy Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Show_Legacy_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to control whether the API response should contain legacy questions or not.</description>
        <inlineHelpText>Check this field to show legacy questions in API response.</inlineHelpText>
        <label>Show Legacy Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Show_Private_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The value of this field will determine whether to show private files or not.</description>
        <inlineHelpText>Check this field if you want to show private files</inlineHelpText>
        <label>Show Private Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Show_Service_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The value of this field will determine whether or not to show service alerts in the response.</description>
        <label>Show Service Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Upload_Files__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Upload Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311API__Usage_Limit_Allocation__c</fullName>
        <defaultValue>1000</defaultValue>
        <inlineHelpText>Maximum number of API requests an API account can make before being disabled. This limit is reset every thirty days (from the last reset).</inlineHelpText>
        <label>Usage Limit Allocation</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311API__Usage_Limit_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Usage Limit Used</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>API Account Configuration</label>
    <listViews>
        <fullName>Incap311API__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>API Account Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Account Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>